refactor: enhance chart categories and add zoom functionality for images